# TwinMindLiveSuggestions

./: .gitignore  .replit  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start-replit.sh
.github/workflows/: replit.yml
backend/: config.py  exporter.py  groq_client.py  main.py  prompts.py  schemas.py  suggestions.py  whisper_segment_filter.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts  types.ts
frontend/src/components/: ChatPanel.tsx  Header.tsx  ResizableColumns.tsx  SettingsModal.tsx  SuggestionsPanel.tsx  TranscriptPanel.tsx
frontend/src/lib/: api.ts  audio.ts  context.ts  export.ts  md.ts
