[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinmind"
version = "0.1.0"
description = "TwinMind — live meeting copilot (FastAPI + React)"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "python-multipart==0.0.12",
  "pydantic==2.9.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend"]
